--- a/ai.html
+++ b/ai.html
@@ -211,18 +211,19 @@ function renderSections() {
     });
 }
 
-function renderTopics(sectionName) {
-    const grid = document.getElementById('forumGrid');
-    const backBtn = document.getElementById('backBtnCont');
-    const title = document.getElementById('viewTitle');
-    grid.innerHTML = "";
-    backBtn.style.display = "block";
-    title.innerText = "قسم: " + sectionName;
-    const filtered = topicsData.filter(t => t.section === sectionName).reverse();
-    if(filtered.length === 0) {
-        grid.innerHTML = `<p style="grid-column: 1/-1; text-align:center; padding:50px;">لا توجد مواضيع.</p>`;
-        return;
-    }
+// البحث عن جزء الـ shorts داخل دالة renderTopics واستبداله بهذا:
+else if (p.type === 'shorts') {
+    const vidId = extractYoutubeId(p.media || "");
+    // إضافة playlist و autoplay و mute لضمان التشغيل التلقائي والمستمر
+    mediaHtml = `
+        <div class="media-container vid-shorts">
+            <iframe 
+                src="https://www.youtube.com/embed/${vidId}?autoplay=1&mute=1&loop=1&playlist=${vidId}&controls=0&modestbranding=1" 
+                allow="autoplay; encrypted-media" 
+                allowfullscreen>
+            </iframe>
+        </div>`;
+}
     filtered.forEach(p => {
         let mediaHtml = "";
         const vidId = extractYoutubeId(p.media || "");
