--- a/ai.html
+++ b/ai.html
@@ -104,16 +104,15 @@
     </header>
 
     <div class="nav-bar">
-        <ul class="nav-menu">
-            <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="index.html">المنتجات</a></li>
-            <li><a href="ai.html" class="active">منتدى شبابيك</a></li>
-            <li><a href="index.html">طرق الدفع</a></li>
-            <li><a href="index.html">من نحن</a></li>
-            <li><a href="index.html">تواصل معنا</a></li>
-        </ul>
-    </div>
-
+    <ul class="nav-menu">
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="index.html?section=categories">المنتجات</a></li>
+        <li><a href="ai.html" class="active">منتدى شبابيك</a></li>
+        <li><a href="index.html?section=paymentPage">طرق الدفع</a></li>
+        <li><a href="index.html?section=aboutPage">من نحن</a></li>
+        <li><a href="index.html?section=contactPage">تواصل معنا</a></li>
+    </ul>
+</div>
     <div class="container" id="mainView">
         <div id="backBtnCont" style="display:none;"><button class="back-btn" onclick="renderSections()"><i class="fas fa-arrow-right"></i> العودة للأقسام</button></div>
         <h1 class="page-title" id="viewTitle">نافذتك لعالم الذوق والجمال</h1>
