--- a/ai.html
+++ b/ai.html
@@ -77,6 +77,78 @@
         footer { background: var(--brown); color: rgba(255,255,255,0.5); padding: 20px 5%; text-align: center; border-top: 1px solid rgba(255,255,255,0.1); font-size: 0.8rem; }
 
         @media (max-width: 768px) { .grid-layout { grid-template-columns: repeat(auto-fill, minmax(160px, 1fr)); } .card-item { height: 320px; } }
+   /* حاوية "جاهز لتجديد ستائر منزلك" */
+.footer-cta {
+    background: var(--brown);
+    color: white;
+    padding: 60px 5%;
+    text-align: center;
+    border-radius: 45px 45px 0 0; /* انحناء علوي كبير مطابق للصورة */
+    margin-top: 50px;
+}
+
+.footer-cta h2 {
+    font-size: 1.8rem;
+    font-weight: 900;
+    margin-bottom: 25px;
+}
+
+/* أزرار الفوتر */
+.footer-btns {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 15px;
+}
+
+.btn-footer-wa {
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    color: white;
+    padding: 12px 30px;
+    border-radius: 12px;
+    text-decoration: none;
+    font-weight: 700;
+    transition: 0.3s;
+}
+
+.btn-footer-prod {
+    background: var(--gold);
+    color: white;
+    padding: 12px 30px;
+    border-radius: 12px;
+    text-decoration: none;
+    font-weight: 700;
+    transition: 0.3s;
+}
+
+/* تذييل الصفحة النهائي */
+footer {
+    background: var(--brown);
+    color: rgba(255, 255, 255, 0.6);
+    padding: 30px 5%;
+    text-align: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.footer-logo {
+    font-size: 2.2rem;
+    font-weight: 900;
+    color: var(--gold);
+    margin-bottom: 10px;
+    cursor: pointer;
+}
+
+.footer-copy {
+    font-size: 0.85rem;
+    opacity: 0.8;
+}
+
+/* توافق الجوال */
+@media (max-width: 768px) {
+    .footer-cta h2 { font-size: 1.4rem; }
+    .footer-cta { border-radius: 30px 30px 0 0; }
+}
     </style>
 </head>
 <body>
@@ -144,10 +216,18 @@
         </div>
     </div>
 
-    <div class="footer-cta">
-        <h2>جاهز لتجديد ستائر منزلك؟</h2>
+   <div class="footer-cta">
+    <h2>جاهز لتجديد ستائر منزلك؟</h2>
+    <div class="footer-btns">
+        <a href="https://wa.me/9647883002797" class="btn-footer-wa">تواصل عبر واتساب</a>
         <a href="index.html" class="btn-footer-prod">تصفح المنتجات</a>
     </div>
+</div>
+
+<footer>
+    <div class="footer-logo" onclick="location.href='index.html'">شبابيك</div>
+    <p class="footer-copy">© 2026 جميع الحقوق محفوظة لشبابيك للستائر - ظل وذوق</p>
+</footer>
 
     <footer>
         <div style="font-size:1.8rem; font-weight:900; color:var(--gold); margin-bottom:10px;">شبابيك</div>
