--- a/ai.html
+++ b/ai.html
@@ -168,16 +168,16 @@ footer {
         </div>
     </header>
 
-    <div class="nav-bar">
-        <ul class="nav-menu">
-            <li><a href="index.html">الرئيسية</a></li>
-            <li><a href="index.html?section=categories">المنتجات</a></li>
-            <li><a href="ai.html" class="active">منتدى شبابيك</a></li>
-            <li><a href="index.html?section=paymentPage">طرق الدفع</a></li>
-            <li><a href="index.html?section=aboutPage">من نحن</a></li>
-            <li><a href="index.html?section=contactPage">تواصل معنا</a></li>
-        </ul>
-    </div>
+   <div class="nav-bar">
+    <ul class="nav-menu">
+        <li><a href="index.html">الرئيسية</a></li>
+        <li><a href="index.html?page=categories">المنتجات</a></li>
+        <li><a href="ai.html" class="active">منتدى شبابيك</a></li>
+        <li><a href="index.html?page=paymentPage">طرق الدفع</a></li>
+        <li><a href="index.html?page=aboutPage">من نحن</a></li>
+        <li><a href="index.html?page=contactPage">تواصل معنا</a></li>
+    </ul>
+</div>
 
     <div class="container" id="mainView">
         <div id="backBtnCont" style="display:none;"><button class="back-btn" onclick="renderSections()"><i class="fas fa-arrow-right"></i> العودة للأقسام</button></div>
