--- a/index.html
+++ b/index.html
@@ -123,64 +123,68 @@
 }
         /* ====== نفس نظام عرض الأقسام لطرق الدفع ====== */
 
+/* تنسيق شبكة طرق الدفع الموحد */
 #paymentList {
     display: grid !important;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 15px;
-    padding: 20px 5%;
+    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); /* متجاوب للمتصفح */
+    gap: 20px;
+    padding: 30px 5%;
 }
 
-/* الهاتف */
+/* تنسيق كارت الدفع (مطابق للمنتدى) */
+.pay-card-premium {
+    position: relative;
+    height: 400px; /* نفس ارتفاع كروت المنتدى */
+    border-radius: 25px;
+    overflow: hidden;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+    border: 1px solid #f0f0f0;
+    background: #fff;
+    cursor: default;
+    transition: 0.4s;
+}
+
+.pay-card-premium img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* لملء الكارت بالكامل مثل المنتدى */
+}
+
+.pay-overlay {
+    position: absolute;
+    bottom: 15px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 90%;
+    background: var(--gold);
+    color: white;
+    padding: 10px 5px;
+    text-align: center;
+    border-radius: 12px;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    z-index: 10;
+}
+
+.pay-overlay h3 {
+    font-weight: 900;
+    font-size: 1rem;
+    margin: 0;
+}
+
+/* التوافق مع الموبايل (تمرير جانبي فخم) */
 @media (max-width: 768px) {
     #paymentList {
         display: flex !important;
         overflow-x: auto !important;
-        scroll-snap-type: x mandatory;
         gap: 15px;
         padding: 20px;
-        -webkit-overflow-scrolling: touch;
+        scrollbar-width: none;
     }
-
-    #paymentList .cat-card-new {
-        flex: 0 0 250px !important;
-        height: 300px;
-        scroll-snap-align: start;
-    }
-}
-
-/* تنسيق الكارت ليكون أنيقاً */
-.cat-card-new {
-    position: relative;
-    height: 350px;
-    border-radius: 20px;
-    overflow: hidden;
-    cursor: pointer;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
-}
- /* تنسيق المتصفح (الكمبيوتر) - شبكة 5 في كل سطر */
-#categoriesList {
-    display: grid !important;
-    grid-template-columns: repeat(5, 1fr); 
-    gap: 15px;
-    padding: 20px 5%;
-}
-
-/* تنسيق الهاتف - تمرير جانبي حصراً */
-@media (max-width: 768px) {
-    #categoriesList {
-        display: flex !important; /* إجبار الهاتف على وضع الأقسام في صف واحد */
-        grid-template-columns: none !important;
-        overflow-x: auto !important; /* تفعيل التمرير */
-        scroll-snap-type: x mandatory;
-        gap: 15px;
-        padding: 20px;
-        -webkit-overflow-scrolling: touch;
-    }
+    #paymentList::-webkit-scrollbar { display: none; }
     
-    #categoriesList .cat-card-new {
-        flex: 0 0 250px !important; /* منع انضغاط الصور وإجبارها على العرض الكامل */
-        height: 300px;
-        scroll-snap-align: start;
+    .pay-card-premium {
+        flex: 0 0 250px; /* عرض ثابت للموبايل ليسمح بالتمرير */
+        height: 320px;
     }
 }
     </style>
