--- a/index.html
+++ b/index.html
@@ -121,191 +121,63 @@
         flex: 0 0 250px; /* عرض ثابت لكل قسم ليسمح بالتمرير */
     }
 }
-        /* ====== نفس نظام عرض الأقسام لطرق الدفع ====== */
-
-/* تنسيق شبكة طرق الدفع الموحد */
+     /* --- تنسيق طرق الدفع المطور (مطابق للمنتدى) --- */
 #paymentList {
     display: grid !important;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr)); /* متجاوب للمتصفح */
-    gap: 20px;
-    padding: 30px 5%;
+    grid-template-columns: repeat(5, 1fr) !important; /* 5 كروت في الصف للحاسوب */
+    gap: 20px !important;
+    padding: 30px 5% !important;
 }
 
-/* تنسيق كارت الدفع (مطابق للمنتدى) */
 .pay-card-premium {
-    position: relative;
-    height: 400px; /* نفس ارتفاع كروت المنتدى */
-    border-radius: 25px;
-    overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-    border: 1px solid #f0f0f0;
-    background: #fff;
-    cursor: default;
-    transition: 0.4s;
+    position: relative !important;
+    height: 400px !important; /* الارتفاع الطولي المطلوب */
+    border-radius: 25px !important;
+    overflow: hidden !important;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.06) !important;
+    background: #fff !important;
+    transition: 0.4s !important;
 }
 
 .pay-card-premium img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* لملء الكارت بالكامل مثل المنتدى */
+    width: 100% !important;
+    height: 100% !important;
+    object-fit: cover !important; /* يضمن ملء الطول بالكامل */
 }
 
 .pay-overlay {
-    position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
-    background: var(--gold);
-    color: white;
-    padding: 10px 5px;
-    text-align: center;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    z-index: 10;
+    position: absolute !important;
+    bottom: 15px !important;
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+    width: 90% !important;
+    background: var(--gold) !important;
+    color: white !important;
+    padding: 12px 5px !important;
+    text-align: center !important;
+    border-radius: 12px !important;
+    z-index: 10 !important;
 }
 
 .pay-overlay h3 {
-    font-weight: 900;
-    font-size: 1rem;
-    margin: 0;
+    font-weight: 900 !important;
+    font-size: 1rem !important;
+    margin: 0 !important;
 }
 
-/* التوافق مع الموبايل (تمرير جانبي فخم) */
+/* التوافق مع الموبايل (تمرير جانبي) */
 @media (max-width: 768px) {
     #paymentList {
         display: flex !important;
         overflow-x: auto !important;
-        gap: 15px;
-        padding: 20px;
-        scrollbar-width: none;
-    }
-    #paymentList::-webkit-scrollbar { display: none; }
-    
-    .pay-card-premium {
-        flex: 0 0 250px; /* عرض ثابت للموبايل ليسمح بالتمرير */
-        height: 320px;
-    }
-}
-          /* تنسيق كارت الدفع الفاخر (مطابق للمنتدى) */
-.pay-card-premium {
-    position: relative;
-    height: 400px; 
-    border-radius: 25px;
-    overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-    border: 1px solid #f0f0f0;
-    background: #fff;
-    cursor: default;
-    transition: 0.4s;
-}
-
-.pay-card-premium img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; 
-}
-
-.pay-overlay {
-    position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
-    background: var(--gold);
-    color: white;
-    padding: 10px 5px;
-    text-align: center;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    z-index: 10;
-}
-
-/* شبكة طرق الدفع - 5 في السطر للحاسوب وتمرير للموبايل */
-#paymentList {
-    display: grid !important;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
-    padding: 30px 5%;
-}
-
-@media (max-width: 768px) {
-    #paymentList {
-        display: flex !important;
-        overflow-x: auto !important;
-        scroll-snap-type: x mandatory;
-        gap: 15px;
-        padding: 20px;
-        scrollbar-width: none;
+        scroll-snap-type: x mandatory !important;
+        gap: 15px !important;
+        padding: 20px !important;
     }
     .pay-card-premium {
-        flex: 0 0 250px !important;
-        height: 320px;
-        scroll-snap-align: start;
-    }
-}
-        /* تنسيق كارت الدفع الفاخر (مطابق تماماً للمنتدى) */
-.pay-card-premium {
-    position: relative;
-    height: 400px; /* نفس ارتفاع كروت المنتدى */
-    border-radius: 25px;
-    overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.06);
-    border: 1px solid #f0f0f0;
-    background: #fff;
-    cursor: default;
-    transition: 0.4s;
-}
-
-.pay-card-premium img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; /* ملء الكارت بالكامل مثل المنتدى */
-}
-
-.pay-overlay {
-    position: absolute;
-    bottom: 15px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 90%;
-    background: var(--gold);
-    color: white;
-    padding: 10px 5px;
-    text-align: center;
-    border-radius: 12px;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
-    z-index: 10;
-}
-
-.pay-overlay h3 {
-    font-weight: 900;
-    font-size: 1rem;
-    margin: 0;
-}
-
-/* تحديث شبكة العرض لتدعم 5 كروت في الصف للحاسوب وتمرير للموبايل */
-#paymentList {
-    display: grid !important;
-    grid-template-columns: repeat(5, 1fr);
-    gap: 20px;
-    padding: 30px 5%;
-}
-
-@media (max-width: 768px) {
-    #paymentList {
-        display: flex !important;
-        overflow-x: auto !important;
-        scroll-snap-type: x mandatory;
-        gap: 15px;
-        padding: 20px;
-        scrollbar-width: none;
-        -webkit-overflow-scrolling: touch;
-    }
-    .pay-card-premium {
-        flex: 0 0 250px !important; /* نفس عرض كروت المنتدى في الموبايل */
-        height: 320px;
-        scroll-snap-align: start;
+        flex: 0 0 250px !important; /* عرض الكارت في الموبايل */
+        height: 320px !important; /* ارتفاع مناسب للموبايل */
+        scroll-snap-align: start !important;
     }
 }
     </style>
